--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+﻿<!DOCTYPE html>
+<html lang="zh">
 <head>
 <!-- basic -->
 <meta charset="utf-8">
@@ -9,7 +9,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="viewport" content="initial-scale=1, maximum-scale=1">
 <!-- site metas -->
-<title>About</title>
+<title>无人区</title>
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="author" content="">	
@@ -41,32 +41,23 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                  <a class="nav-link" href="index.html">HOME</a>
+                  <a class="nav-link" href="index.html">首页</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html">ABOUT</a>
+                  <a class="nav-link" href="about.html">关于</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="product.html">OUR PRODUCTS</a>
+                  <a class="nav-link" href="product.html">游戏</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="video.html">VIDEO GAMES</a>
+                  <a class="nav-link" href="video.html">游戏内容</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="remot.html">REMOT CONTROL</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contact.html">CONTACT US</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#"><img src="images/search-icon.png"></a>
-                </li>
-                <li class="nav-item active">
-                  <a class="nav-link" href="#">SIGN IN</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">REGISTER</a>
-                </li>
+       		<li class="nav-item">
+		  <a class="nav-link" href="https://space.bilibili.com/1004287655/">B站官方账号</a>
+		</li>
+		<li class="nav-item">
+		  <a class="nav-link" href="https://afdian.net/a/Wurenqu">用爱发电</a>
+		</li>
               </ul>
             </div>
         </nav>
@@ -80,59 +71,21 @@
           <div class="image_2"><img src="images/img-2.png"></div>
         </div>
         <div class="col-md-6">
-          <h1 class="about_text">ABOUT</h1>
-          <p class="lorem_text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable</p>
-          <div class="shop_bt_2"><a href="#">Shop Now</a></div>
+          <h1 class="about_text">开发组简介：</h1>
+          <h1>2022年12月，5名初中生相聚在一起，组建了一个小团队。2023年1月，游戏正式开发。随着时间的推移，开发组逐渐壮大。如果您想加入我们，可以加入QQ群738762407审核（目前不缺人）</h1>
+	  <h1 class="about_text">开发组成员：</h1>
+	  <h1>夜莺<br/>鄙人不才<br/>重日古地<br/>老王<br/>晴雪<br/>Chairria Katie<br/>橘子<br/>照晴dasabi<br/>By.Cover.<br/>粉猫<br/>Ghost.清风<br/>好名字<br/>见高<br/>烂在地上的栀子花<br/>MoMo的苏德<br/>斯蕾娜·卡斯兰娜<br/>我是谁QAQ<br/>chengcccc<br/>小白<br/>小憋<br/>徐昊阳<br/> <br/>战狼9527<br/>14<br/>ΘΑΡΘΕΙΣ ΣΑΝ ΑΣΤΡΑΠΗ<br/>咕嘚<br/>梦鸢辞<br/>七晨风<br/>矢量</h1>
         </div>
       </div>
     </div>
   </div>
   <!-- about section end -->
   <!-- footer section start -->
-  <div class="section_footer ">
-      <div class="container"> 
-          <div class="footer_section_2">
-            <div class="row">
-                <div class="col-sm-6 col-md-6 col-lg-3">
-                  <h2 class="account_text">About Us</h2>
-                  <p class="ipsum_text_2">dolor sit amet, consectetur magna aliqua. Ut enim ad minim veniam, quisdotempor incididunt r</p>
-                </div>
-                <div class="col-sm-6 col-md-6 col-lg-3">
-                  <h2 class="account_text">Useful Link</h2>
-                  <div class="useful_link">
-                    <ul>
-                      <li><a href="#">Video games</a></li>
-                      <li><a href="#">Remote control</a></li>
-                      <li><a href="#">3d controller</a></li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="col-sm-6 col-md-6 col-lg-3">
-                <h2 class="account_text">Contact Us</h2>
-                <p class="ipsum_text_2">dolor sit amet, consectetur magna aliqua. quisdotempor incididunt ut e </p>
-                </div>
-          <div class="col-sm-6 col-md-6 col-lg-3">
-            <h2 class="account_text">Newsletter</h2>
-            <input type="" class="email_text" placeholder="Enter Your Email" name="Enter Your Email">
-            <button class="subscribr_bt">SUBSCRIBE</button>
-          </div>
-        </div>
-      </div>
-      <div class="social_icon">
-        <ul>
-          <li><a href="#"><img src="images/fb-icon.png"></a></li>
-          <li><a href="#"><img src="images/twitter-icon.png"></a></li>
-          <li><a href="#"><img src="images/linkdin-icon.png"></a></li>
-          <li><a href="#"><img src="images/instagram-icon.png"></a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
   <!-- footer section end -->
   <!-- copyright section start -->
   <div class="copyright_section">
     <div class="container">
-      <p class="copyright_text">Copyright 2020 All Right Reserved By <a href="https://html.design/"> Free html Templates</p>
+      <p class="copyright_text">感谢各位对无人区开发组的支持！网站技术支持： <a href="https://space.bilibili.com/627069423"> Chairria Katie</p>
     </div>
   </div>
   <!-- copyright section end -->
