--- a/video.html
+++ b/video.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+﻿<!DOCTYPE html>
+<html lang="zh">
 <head>
 <!-- basic -->
 <meta charset="utf-8">
@@ -9,7 +9,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="viewport" content="initial-scale=1, maximum-scale=1">
 <!-- site metas -->
-<title>Video</title>
+<title>无人区</title>
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="author" content="">	
@@ -41,32 +41,23 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                  <a class="nav-link" href="index.html">HOME</a>
+                  <a class="nav-link" href="index.html">首页</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html">ABOUT</a>
+                  <a class="nav-link" href="about.html">关于</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="product.html">OUR PRODUCTS</a>
+                  <a class="nav-link" href="product.html">游戏</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="video.html">VIDEO GAMES</a>
+                  <a class="nav-link" href="video.html">游戏内容</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="remot.html">REMOT CONTROL</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contact.html">CONTACT US</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#"><img src="images/search-icon.png"></a>
-                </li>
-                <li class="nav-item active">
-                  <a class="nav-link" href="#">SIGN IN</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">REGISTER</a>
-                </li>
+       		<li class="nav-item">
+		  <a class="nav-link" href="https://space.bilibili.com/1004287655/">B站官方账号</a>
+		</li>
+		<li class="nav-item">
+		  <a class="nav-link" href="https://afdian.net/a/Wurenqu">用爱发电</a>
+		</li>
               </ul>
             </div>
         </nav>
@@ -77,64 +68,31 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <h1 class="video_text_2">3d video game</h1>
-          <h1 class="controller_text_2">remoto control</h1>
-          <p class="banner_text_2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
-          <div class="shop_bt"><a href="#">Shop Now</a></div>
+          <h1 class="video_text_2">无人区</h1>
+          <h1 class="controller_text_2">游戏内容</h1>
+          <p class="banner_text_2">这是我们的开发组制作游戏时游戏内的截图</p>
         </div>
-        <div class="col-md-6">
-          <div class="image_4"><img src="images/img-4.png"></div>
-        </div>
+	<div class="col-md-6">
+          <h1 class="controller_text_2">更多游戏开发内容</h1>
+	  <h1 class="controller_text_2">请关注B站官方账号</h1>
+	</div>
+	<div class="image_4"><img src="images/videoimg1.webp"></div>
+	<div class="image_4"><img src="images/videoimg2.webp"></div>
+	<div class="image_4"><img src="images/videoimg3.webp"></div>
+	<div class="image_4"><img src="images/videoimg4.png"></div>
+	<div class="image_4"><img src="images/videoimg5.png"></div>
       </div>
     </div>
   </div>
   <!-- video section end -->
   <!-- footer section start -->
-  <div class="section_footer margin_top_2">
-      <div class="container"> 
-          <div class="footer_section_2">
-            <div class="row">
-                <div class="col-sm-6 col-md-6 col-lg-3">
-                  <h2 class="account_text">About Us</h2>
-                  <p class="ipsum_text_2">dolor sit amet, consectetur magna aliqua. Ut enim ad minim veniam, quisdotempor incididunt r</p>
-                </div>
-                <div class="col-sm-6 col-md-6 col-lg-3">
-                  <h2 class="account_text">Useful Link</h2>
-                  <div class="useful_link">
-                    <ul>
-                      <li><a href="#">Video games</a></li>
-                      <li><a href="#">Remote control</a></li>
-                      <li><a href="#">3d controller</a></li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="col-sm-6 col-md-6 col-lg-3">
-                <h2 class="account_text">Contact Us</h2>
-                <p class="ipsum_text_2">dolor sit amet, consectetur magna aliqua. quisdotempor incididunt ut e </p>
-                </div>
-          <div class="col-sm-6 col-md-6 col-lg-3">
-            <h2 class="account_text">Newsletter</h2>
-            <input type="" class="email_text" placeholder="Enter Your Email" name="Enter Your Email">
-            <button class="subscribr_bt">SUBSCRIBE</button>
-          </div>
-        </div>
-      </div>
-      <div class="social_icon">
-        <ul>
-          <li><a href="#"><img src="images/fb-icon.png"></a></li>
-          <li><a href="#"><img src="images/twitter-icon.png"></a></li>
-          <li><a href="#"><img src="images/linkdin-icon.png"></a></li>
-          <li><a href="#"><img src="images/instagram-icon.png"></a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
   <!-- footer section end -->
   <!-- copyright section start -->
   <div class="copyright_section">
     <div class="container">
-      <p class="copyright_text">Copyright 2020 All Right Reserved By <a href="https://html.design/"> Free html Templates</p>
+      <p class="copyright_text">感谢各位对无人区开发组的支持！网站技术支持： <a href="https://space.bilibili.com/627069423"> Chairria Katie</p>
     </div>
+  </div>
   </div>
   <!-- copyright section end -->
   <!-- Javascript files-->
